# terraform-docker-swarm-aws

./: .editorconfig  .pre-commit-config.yaml  CHANGES.md  NOTES.md  README.md  SCRIPTS.md  SSH.md  SWARM-UPGRADE.md  UPGRADE.md  cloudwatch-agent.tf  cloudwatch-dashboard.tf  cloudwatch-dashboard.yaml.tftpl  cloudwatch-dashboard.yaml.tmpl  common.cloud-config  common.cloud-config.tmpl  daemons.tf  iam-swarm.tf  init_daemon.py  init_manager.py  init_node.py  init_worker.py  main.tf  manager.cloud-config  managers.tf  output.tf  package-lock.json  package.json  pyproject.toml  requirements.txt  s3.tf  swarm-join-design.md  swarm_joiner.py  variables.tf  versions.tf  worker.cloud-config  workers.tf
.github/workflows/: terraform.yml
examples/: .gitignore
examples/iam-policies/: .terraform.lock.hcl  README.md  policies.tf  terraform-dockerswarm-cloudwatch.json  terraform-dockerswarm-ec2-any.json  terraform-dockerswarm-ec2-resource.json  terraform-dockerswarm-iam.json  terraform-dockerswarm-s3.json  versions.tf
examples/manager-and-workers/: README.md  docker-swarm.tf  eips.tf  users.cloud-config  vpc.tf
examples/sandbox/: .terraform.lock.hcl  README.md  docker-swarm.tf  eips.tf  output.tf  template.cloud-config  tls.tf  variables.tf  versions.tf  vpc.tf
examples/sandbox-tls/: .gitignore  docker-swarm.tf  template.cloud-config  tls.tf  variables.tf  versions.tf  vpc.tf
examples/simple/: .terraform.lock.hcl  README.md  docker-swarm.tf  eips.tf  versions.tf  vpc.tf
examples/tls/: README.md  docker-swarm.tf  eips.tf  output.tf  tls.tf  variables.tf  versions.tf  vpc.tf
(+10 files in other folders)
