[project]
name = "terraform-docker-swarm-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "boto3>=1.38.7",
    "botocore>=1.38.7",
]

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
    "ruff>=0.11.8",
]
